--- a/06-jaxrs-service/web/WEB-INF/web.xml
+++ b/06-jaxrs-service/web/WEB-INF/web.xml
@@ -6,4 +6,13 @@
          metadata-complete="false"
          version="3.1">
 
+    <servlet>
+        <servlet-name>Jersey servlet</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Jersey servlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
