extension of the example 02-servlet

--- a/02-servlet/pom.xml
+++ b/02-servlet/pom.xml
@@ -7,6 +7,7 @@
     <groupId>pl.pg.asobecki.wai</groupId>
     <artifactId>02-servlet</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -16,4 +17,16 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>web\WEB-INF\web.xml</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
