--- a/08-spring-boot-web/src/main/resources/application.properties
+++ b/08-spring-boot-web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.mvc.view.prefix: /test/
+#spring.mvc.view.prefix: /WEB-INF/jsp
 spring.mvc.view.suffix: .jsp
 
 default.welcome.message: Default message for WAI
