--- a/00-compose/docker-compose.yml
+++ b/00-compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     web:
-        image: httpd
+        build: ./myservice
         ports:
             - 9001:80
         depends_on:
@@ -12,4 +12,3 @@ services:
         image: mariadb
         environment: 
             MYSQL_ROOT_PASSWORD: "xyz"
-
