--- a/02-servlet/docker/Dockerfile
+++ b/02-servlet/docker/Dockerfile
@@ -1,5 +1,5 @@
 # This is simple servlet container based on the Apache Tomcat software
-FROM tomcat:latest
+FROM tomcat:9.0
 
 COPY war/02-servlet-1.0-SNAPSHOT.war /usr/local/tomcat/webapps/02-servlet-1.0-SNAPSHOT.war
 
